--- a/styleResume.css
+++ b/styleResume.css
@@ -1,2 +1,1 @@
-body{background-color:DeepSkyBlue;color:white;}
-body{text-align:center;font-size:15pt;}
+body{background-color:DeepSkyBlue;color:white;font-size:12pt;}
